--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
     <link rel="stylesheet" href="index.css">
     <script src="index.js" defer></script>
     <title>Document</title>
+
+    
+
 </head>
 
 <body>
-    <canvas id="canvas"></canvas>
+    <div id="backgroundLayer" style="position: absolute; width: 100%; height: 100%; z-index: -1;"></div>
+    <canvas id="canvas" style="position: absolute; width: 100%; height: 100%;"></canvas>
 </body>
 
 </html>
 
 
-<!-- 请阅读以上源码，稍后我会向你提出需求，你无需将所有代码发送给我，只需将要修改或新增的代码给我并且说明加在何处即可 -->
+<!-- 请阅读以上源码，稍后我会向你提出需求，之后你无需将所有代码全部发送给我，只需将要修改或新增的代码发送给我并且说明添加在何处即可 -->
